test/expected/show-error.out
cdecl> show foo
            ^
6: error: "foo": no such type or macro defined
cdecl> show __cplusplus
            ^
6: error: "__cplusplus" not supported in C
cdecl> set k&rc
cdecl> show __STDC__
            ^
6: error: "__STDC__" not supported until C89
cdecl> show __STDC_VERSION__
            ^
6: error: "__STDC_VERSION__" not supported until C89
cdecl> set c++03
c++decl> show using
              ^
6: error: "using" not supported until C++11
c++decl> show __STDC__
              ^
6: error: "__STDC__" not supported in C++
c++decl> show __STDC_VERSION__
              ^
6: error: "__STDC_VERSION__" not supported in C++
